# modem_management

./: README.md  serial_write_and_read.c  testc
modem_connection/: Cargo.toml
modem_connection/src/: attach.code-workspace  main.rs
send_and_receive/: Cargo.toml
send_and_receive/src/: main.rs
unix_commander/: Cargo.toml
unix_commander/src/: main.rs
unix_receiver/: Cargo.toml
unix_receiver/src/: main.rs
