[package]
name = "modem_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.142"
tokio = { version="1.25.0", features=["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"